styles/components/_nav.scss
@use "../config/spacing" as *;
@use "../config/breakpoints" as *;

.nav {
    display: flex;
    align-items: center;
    justify-content: center;

    &__list {
        display: none;
    }

    @include breakpoint(sm) {
        justify-content: space-between;

        &__list {
            display: flex;
            column-gap: spacing-get(xl);
        }
    }
}

.logo-image {
    --image-url: url('/LogoCEFIR_1x.webp?');

    width: 118px;
    height: 64px;
    background-image: var(--image-url);
}

.no-webp .logo-image {
    --image-url: url('/LogoCEFIR.png?');
}

body[data-theme="dark"] .logo-image {
    --image-url: url('/LogoCEFIR_1x_dark.webp?');
}

body[data-theme="dark"].no-webp .logo-image {
    --image-url: url('/LogoCEFIR_dark.png?');
}

